<resources>
    <string name="char_input">\@0123456789_abcdefghijklmnopqrstuvwxyz</string>
    <string name="score_input">0123456789</string>
    <string name="app_name">KyGroup</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">超级考研群</string>
    <string name="kaoyan_app">#超级考研群App#</string>
    <string name="kaoyan_share">---大视野的考研神器，最实用的考研助手</string>
    <string name="main_title">考研app</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="register_tip">第一次使用需创建您的账户</string>
    <string name="login_tip">使用账户登陆</string>
    <string name="login_no_picture">您还未上传头像，请上传头像后再提交！</string>
    <string name="login_success">恭喜您注册成功!</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="kygroup">超级考研群</string>
    <string name="user_name">用户名:</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="username_input">请输入用户名</string>
    <string name="password">用户密码</string>
    <string name="mail">可用手机号</string>
    <string name="pwd_again">再次输入</string>
    <string name="mail_input">请输入手机号</string>
    <string name="pwd_input">请输入正确的密码</string>
    <string name="pwd_not_same">两次输入的密码不一样</string>
    <string name="pwd_length_error">密码长度为6到18字符，请重新输入</string>
    <string name="university">学校</string>
    <string name="university_msg">院校信息</string>
    <string name="kaoyan_university">考研院校</string>
    <string name="colleage">院系</string>
    <string name="major">专业</string>
    <string name="year">招生年份</string>
    <string name="select_university">请选择学校</string>
    <string name="select_colleage">请选择院系</string>
    <string name="select_major">请选择专业</string>
    <string name="select_enrollment">请选择入学年份</string>
    <string name="improve_msg">请完善你的个人院校信息，以迅速获取研友群体，便于交流与互助。</string>
    <string name="register_later">尚未深思熟虑</string>
    <string name="already_register">已注册,</string>
    <string name="click_login">点击登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别:</string>
    <string name="register_now">下一步</string>
    <string name="nick_input">请输入昵称</string>
    <string name="mail_error">您输入的手机号不合法，请重新输入</string>
    <string name="register_failed">注册失败</string>
    <string name="my_aim">我的报考</string>
    <string name="my_resouce">我的资料</string>
    <string name="personal_msgs">个人信息</string>
    <string name="friends">好友</string>
    <string name="personal_msg">小纸条</string>
    <string name="system_msg">系统私信</string>
    <string name="setting">设置</string>
    <string name="input_university_tip">请输入大学名称</string>
    <string name="u_tip">数据库中涵盖了我国当前所有的研究生招生院校，请在搜索框中输入目标院校进行查找</string>
    <string name="u_tip1">数据库中包含了我国当前所有的本科院校（含独立院校）信息，请在搜索框中输入院校名称进行查找。</string>
    <string name="s_select_university">选择学校</string>
    <string name="s_select_colleage">选择院系</string>
    <string name="s_select_major">选择专业</string>
    <string name="s_select_year">入学年份</string>
    <string name="request_failed">请求数据失败</string>
    <string name="other">其他</string>
    <string name="register_already">手机号已注册，请登录</string>
    <string name="photo">头像</string>
    <string name="hometown">籍贯:</string>
    <string name="submit_failed">信息提交失败</string>
    <string name="complete_msg">请完善个人信息</string>
    <string name="search_friends">找研友</string>
    <string name="login_out">注销登录</string>
    <string name="tips_login_out">您确定要注销登录？</string>
    <string name="search_broswer">浏览</string>
    <string name="search_classmates">校友</string>
    <string name="search_post_graduate">研友</string>
    <string name="search_fellow">同乡</string>
    <string name="search_title">考生列表</string>
    <string name="havenodata">没有内容了</string>
    <string name="reg_msg">报考信息</string>
    <string name="remark">备考</string>
    <string name="remark_state">备考状态:</string>
    <string name="fighting">战况:</string>
    <string name="personal_announce">备考宣言</string>
    <string name="suf_msg">的信息</string>
    <string name="account_manage">账号管理</string>
    <string name="personal_info">个人信息</string>
    <string name="weibo_str">社交绑定</string>
    <string name="sys_help">系统帮助</string>
    <string name="password_modify">修改密码</string>
    <string name="home_modify">籍贯</string>
    <string name="school_modify">请完善您的院校信息</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="renren_web">人人网</string>
    <string name="share_friends">分享给好友</string>
    <string name="info_response">意见反馈</string>
    <string name="help_app">帮助</string>
    <string name="quit_app">退出</string>
    <string name="bind_already">已经绑定</string>
    <string name="unbind_already">未绑定</string>
    <string name="authorization_canceled">取消认证</string>
    <string name="authorization_failed">认证失败</string>
    <string name="authorization_success">认证成功</string>
    <string name="hint_old_password">输入旧密码</string>
    <string name="hint_new_password">输入新密码</string>
    <string name="hint_sure_password">重复输入新密码</string>
    <string name="tips_password_modify_success">密码修改成功</string>
    <string name="tips_password_modify_failure">密码修改失败</string>
    <string name="str_lose_password"><u>忘记密码？</u></string>
    <string name="str_modify_password">修改密码</string>
    <string name="common_back">返回</string>
    <string name="common_modify">修改</string>
    <string name="tips_old_password_empty">密码不能为空</string>
    <string name="tips_new_password_empty">新密码不能为空</string>
    <string name="tips_not_same_password_empty">两次新密码输入不一致</string>
    <string name="tips_send_password_email">重置密码已发送到手机</string>
    <string name="baokao">报考</string>
    <string name="message">私信</string>
    <string name="email_error">手机号无效</string>
    <string name="email_register_error">手机号已经注册</string>
    <string name="pwd_error">密码错误</string>
    <string name="user_not_exist">用户无效</string>
    <string name="get_msg_error">获取信息失败</string>
    <string name="add_friend_success">添加成功</string>
    <string name="add_friend_failure">添加失败</string>
    <string name="remove_friend_success">删除成功</string>
    <string name="remove_friend_failure">删除失败</string>
    <string name="submit_success">提交成功</string>
    <string name="per_submit_failed">提交失败,您的信息完整吗？</string>
    <string name="finish">完成</string>
    <string name="sharing">考研群正在分享</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_empty">分享为空</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="cancel_focus">取消关注</string>
    <string name="forbid">拉黑举报</string>
    <string name="year_tip">年</string>
    <string name="grade_tip">级</string>
    <string name="tips_no_network">当前网络不可用</string>
    <string name="tips_no_empty_msg">发送内容不能为空</string>
    <string name="tips_send_msg_failed">发送失败</string>
    <string name="pull_to_refresh_tap_label"></string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="alter_pic">点击头像可添加或者修改头像</string>
    <string name="edit_nickname">昵称</string>
    <string name="edit_hometown">籍贯</string>
    <string name="edit_university">个人院校</string>
    <string name="edit_school">毕业院校</string>
    <string name="edit_colleage">院系</string>
    <string name="edit_major">专业</string>
    <string name="edit_year">入学年份</string>
    <string name="edit_resouce">编辑资料</string>
    <string name="alter_nickname">修改昵称</string>
    <string name="announce_too_long">您的宣言太长了</string>
    <string name="aim_university">目标院校</string>
    <string name="major_detail">专业详情</string>
    <string name="post_friends_loading">研友加载中...</string>
    <string name="post_friends_loading_failed">研友加载失败，重新加载</string>
    <string name="add_focus">长按添加关注</string>
    <string name="dia_change_aim">更改目标院校</string>
    <string name="dia_add_foucs">添加关注院校</string>
    <string name="dia_delete_focus">删除关注院校</string>
    <string name="focus_uni">关注院校</string>
    <string name="baokao_exist">报考院校已存在</string>
    <string name="alter_suc">修改目标院校成功</string>
    <string name="tip">提示</string>
    <string name="exit_msg">您确定要退出吗？</string>
    <string name="year_error">报考年份早于本科入学年份</string>
    <string name="hint_feedback">请输入您的反馈意见</string>
    <string name="txt_commit">提交</string>
    <string name="feedback_success">反馈成功！</string>
    <string name="feedback_failure">反馈失败！</string>
    <string name="addtoblack">拉黑</string>
    <string name="report">举报</string>
    <string name="addtoblack_success">拉黑成功</string>
    <string name="addtoblack_failed">拉黑失败</string>
    <string name="major_name">专业名称</string>
    <string name="directions">研究方向</string>
    <string name="exams">考试科目</string>
    <string name="plan">招生计划(括号内为推免人数)</string>
    <string name="reference">复试线</string>
    <string name="subject_content">复试科目及内容</string>
    <string name="extra">备注</string>
    <string name="warning">招生考试信息以学校相关招考政策为准!</string>
    <string name="register_graduate">研究生注册</string>
    <string name="register_student">考生注册</string>
    <string name="blacklist">黑名单</string>
    <string name="math">数学：</string>
    <string name="english">英语：</string>
    <string name="compre">综合：</string>
    <string name="politics">政治：</string>
    <string name="sum_point">总分：</string>
    <string name="master_school_tip">研究生院校</string>
    <string name="exam_point">考试成绩</string>
    <string name="select_graduate_year">请选择入学年份</string>
    <string name="graduate_university">就读院校</string>
    <string name="subject1">科目一</string>
    <string name="subject2">科目二</string>
    <string name="subject3">科目三</string>
    <string name="subject4">科目四</string>
    <string name="score">考研成绩</string>
    <string name="sign">签名</string>
    <string name="authenticate_ed">已认证  </string>
    <string name="authenticate_ing">未认证</string>
    <string name="teacher">各方向指导老师</string>
    <string name="local_uni">家里蹲大学</string>
    <string name="score_unknown">尚未填写</string>
    <string name="post_suffix">级研究生</string>
    <string name="auth_post1">我是研究生</string>
    <string name="auth_post2">身份认证</string>
    <string name="auth_post3">已通过认证</string>
    <string name="authing">身份认证中</string>
    <string name="auth_failed">认证失败，请重新认证</string>
    <string name="upload_credentials">上传证件照</string>
    <string name="upload_msg1">1、上传所能证明本人研究生身份的证件包括但不限于：含有研究生院校信息的居民身份证、护照、研究生录取通知书、研究生学生证、研究生毕业证等，任一即可。</string>
    <string name="upload_msg2">2、用户提交申请后，我们将在两个工作日内进行审核并依法保障个人信息安全。</string>
    <string name="upload_msg3">3、上传证件信息须与注册时研究生院校信息一致，认证时以证件信息为准。</string>
    <string name="upload_msg4">上传证件如有伪造行为及虚假信息，一切法律责任由个人承担！</string>
    <string name="upload_progress">上传进度</string>
    <string name="upload_success">上传成功</string>
    <string name="exit_relogin">您已通过认证，请重新登录</string>
    <string name="upload_failed">上传失败</string>
    <string name="none_mates">暂无研友</string>
    <string name="make_sure_cancel">您确定要解除黑名单吗？</string>
    <string name="same_level">同等学历加试</string>
    <string name="references_books">参考书目</string>
    <string name="bbs">讨论区</string>
    <string name="scan">查看</string>
    <string name="posts">发帖</string>
    <string name="my_poster">我要发帖</string>
    <string name="upgrade_prompt">升级提示</string>
    <string name="speakalot">您说的太多了</string>
    <string name="speak_none">您什么也没说啊</string>
    <string name="send_success">发送成功</string>
    <string name="select_year">选择年份</string>
</resources>