<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingTop="15dp" >

    <EditText
        android:id="@+id/old_edit"
        style="@style/modify_password_edit"
        android:hint="@string/hint_old_password" />

    <EditText
        android:id="@+id/new_edit"
        style="@style/modify_password_edit"
        android:layout_below="@id/old_edit"
        android:hint="@string/hint_new_password" />

    <EditText
        android:id="@+id/sure_edit"
        style="@style/modify_password_edit"
        android:layout_below="@id/new_edit"
        android:hint="@string/hint_sure_password" />

    <TextView
        android:id="@+id/lose_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/sure_edit"
        android:layout_below="@id/sure_edit"
        android:layout_marginTop="15dp"
        android:text="@string/str_lose_password"
        android:textColor="#f18e10"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_title_height"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_bar_color"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_btn"
            style="@style/modify_password_btn"
            android:text="@string/common_back" />

        <Button
            android:id="@+id/submit_btn"
            style="@style/modify_password_btn"
            android:text="@string/common_modify" />
    </LinearLayout>

</RelativeLayout>