<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color" >

    <LinearLayout
        android:id="@+id/selectlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/university_tip"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical|right"
                android:text="@string/university"
                android:textColor="#707070"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/university_tip"
                android:gravity="center_vertical|left"
                android:text="@string/select_university"
                android:textColor="#c3c3c3"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#f18e10" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/colleage_tip"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical|right"
                android:text="@string/colleage"
                android:textColor="#707070"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/colleage_tip"
                android:gravity="center_vertical|left"
                android:text="@string/select_colleage"
                android:textColor="#c3c3c3"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#f18e10" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/major_tip"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical|right"
                android:text="@string/major"
                android:textColor="#707070"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/major_tip"
                android:gravity="center_vertical|left"
                android:text="@string/select_major"
                android:textColor="#c3c3c3"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#f18e10" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/year_tip"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center_vertical|right"
                android:text="@string/year"
                android:textColor="#707070"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:id="@+id/select_year"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/year_tip"
                android:gravity="center_vertical|left"
                android:text="@string/select_year"
                android:textColor="#c3c3c3"
                android:textSize="@dimen/login_btn_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/right_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectlayout"
        android:layout_below="@+id/selectlayout"
        android:layout_marginTop="18dp"
        android:src="@drawable/failed" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/improve_msg"
        android:textColor="#707070" />

    <TextView
        android:id="@+id/skip_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/selectlayout"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:drawablePadding="4dp"
        android:drawableRight="@drawable/emoji"
        android:gravity="center"
        android:text="@string/register_later"
        android:textColor="#e15ee8"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/already_register"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/login_btn_size" />

        <TextView
            android:id="@+id/goto_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/click_login"
            android:textColor="#1aa258"
            android:textSize="@dimen/login_btn_size" />
    </LinearLayout>

</RelativeLayout>