<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tip"
        android:textColor="#028818"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/im_login_frame"
        android:orientation="vertical" 
        >

        <TextView
            android:id="@+id/addtoblack"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/addtoblack"
            android:textColor="#888888"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/report"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/report"
            android:textColor="#888888"
            android:textSize="18sp" />
    </LinearLayout>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_below="@+id/linearLayout1"
	    android:layout_marginTop="7dp"
	    android:background="@color/white"/>
</RelativeLayout>